--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -210,8 +210,7 @@ footer {
     background: url(../images/header-bg.png) repeat;
     height: 3rem;
     border-top: 2px darkred outset;
-    padding: 1px;
-    padding-bottom: 5px;
+    padding: 5px 1px;
     width: 100%;
 }
 
